--- a/src/app/pages/e404/e404.page.html
+++ b/src/app/pages/e404/e404.page.html
@@ -11,5 +11,6 @@
 
   <h2>Oooops!</h2>
   <p>O que você procura não pode ser encontrado!</p>
+  <ion-button expand="block" routerLink="/"><ion-icon name="home"></ion-icon>&nbsp;Início</ion-button>
 
 </ion-content>
