--- a/src/app/pages/e404/e404.page.html
+++ b/src/app/pages/e404/e404.page.html
@@ -11,6 +11,8 @@
 
   <h2>Oooops!</h2>
   <p>O que você procura não pode ser encontrado!</p>
+
+  <!-- 1. Botão para retornar ao início do app -->
   <ion-button expand="block" routerLink="/"><ion-icon name="home"></ion-icon>&nbsp;Início</ion-button>
 
 </ion-content>
