--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,14 @@
               <ion-label>Notícias</ion-label>
             </ion-item>
 
-            <ion-item routerDirection="root" routerLink="/contacts" lines="none" detail="false" routerLinkActive="selected">
+            <ion-item routerDirection="root" routerLink="/contacts" lines="none" detail="false"
+              routerLinkActive="selected">
               <ion-icon slot="start" name="chatbubbles"></ion-icon>
               <ion-label>Faça Contato</ion-label>
             </ion-item>
 
-            <ion-item routerDirection="root" routerLink="/about" lines="none" detail="false" routerLinkActive="selected">
+            <ion-item routerDirection="root" routerLink="/about" lines="none" detail="false"
+              routerLinkActive="selected">
               <ion-icon slot="start" name="information-circle"></ion-icon>
               <ion-label>Sobre</ion-label>
             </ion-item>
@@ -38,6 +40,7 @@
 
       <!-- 2. Mensagem de Copyright -->
       <ion-text class="ion-text-center ion-padding"><small>&copy; Copyright 2021 André Luferat</small></ion-text>
+
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
