--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,19 +7,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<!-- 1. Verifica se os artigos já chegaram -->
+<ion-content class="ion-padding" fullscreen *ngIf="items">
 
-  <h2>Artigos Recentes</h2>
+  <h2 class="ion-margin-bottom">Artigos Recentes</h2>
 
-  <!-- 1. Exibe os artigos -->
-  <div class="article" *ngFor="let item of items | async">
+  <!-- 2. Exibe os artigos -->
+  <div *ngFor="let item of items | async">
 
-    <ion-card>
+    <!-- 3. 'card' clicável com o link do artigo -->
+    <ion-card class="ion-no-margin ion-margin-bottom" routerLink="/view/{{item.artId}}">
+
       <img src="{{ item.img }}" alt="{{ item.title }}">
+
       <ion-card-header>
         <ion-card-title>{{ item.title }}</ion-card-title>
       </ion-card-header>
+
       <ion-card-content>{{ item.intro }}</ion-card-content>
+
     </ion-card>
 
   </div>
