--- a/src/app/pages/view/view.page.html
+++ b/src/app/pages/view/view.page.html
@@ -9,6 +9,7 @@
 
 <ion-content class="ion-padding">
 
+  <!-- 1. Se já tem o artigo -->
   <div *ngIf="item | async as art">
 
     <h2>{{ art.title }}</h2>
