--- a/src/app/pages/e404/e404.page.html
+++ b/src/app/pages/e404/e404.page.html
@@ -12,4 +12,10 @@
   <h2>Oooops!</h2>
   <p>O que você procura não pode ser encontrado!</p>
 
+  <ion-button expand="block" routerLink="/">
+    <ion-icon name="home"></ion-icon>
+    &nbsp;
+    Página Inicial
+  </ion-button>
+
 </ion-content>
