--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -14,7 +14,7 @@
   <p class="ion-text-center"><small>Você precisa ter uma conta do Google (Gmail).</small></p>
   <ion-button expand="block" (click)="login()">
     <ion-icon name="logo-google" slot="start"></ion-icon>
-    Login with Google
+    Entrar com o Google
   </ion-button>
 
 </ion-content>
