--- a/src/app/pages/logout/logout.page.html
+++ b/src/app/pages/logout/logout.page.html
@@ -14,7 +14,7 @@
   <p class="ion-text-justify">Clique no botão abaixo para confirmar a saída do aplicativo.</p>
   <p>&nbsp;</p>
   <ion-button (click)="logout()" expand="block">
-    Sair do Aplicativo
+    <ion-icon name="log-out-outline" slot="start"></ion-icon>Sair do Aplicativo
   </ion-button>
 
 </ion-content>
