--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -23,12 +23,12 @@
       Para editar seu perfil e/ou trocar a senha clique no botão abaixo:
     </p>
     <ion-button class="ion-margin-top ion-margin-bottom" expand="block" (click)="profile()">
-      Editar perfil do Google
+      <ion-icon name="person-outline" slot="start"></ion-icon>Editar perfil do Google
     </ion-button>
 
     <p class="ion-margin-top ion-margin-bottom">Para sair do  aplicativo, clique no botão abaixo:</p>
     <ion-button class="ion-margin-top ion-margin-bottom" expand="block" routerLink="/logout">
-      Sair
+      <ion-icon name="log-out-outline" slot="start"></ion-icon>Sair do Aplicativo
     </ion-button>
 
 </ion-content>
