--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <ion-note>Envolvendo para desenvolver.</ion-note>
 
           <ion-menu-toggle auto-hide="false">
-            <ion-item routerDirection="root" routerLink="/" lines="none" detail="false" routerLinkActive="selected">
+            <ion-item routerDirection="root" routerLink="/home" lines="none" detail="false" routerLinkActive="selected">
               <ion-icon name="home" slot="start"></ion-icon>
               <ion-label>Início</ion-label>
             </ion-item>
