--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <ion-menu-toggle auto-hide="false">
             <ion-item routerDirection="root" routerLink="/home" lines="none" detail="false" routerLinkActive="selected">
               <ion-icon name="home" slot="start"></ion-icon>
-              <ion-label>Início</ion-label>
+              <ion-label>Artigos</ion-label>
             </ion-item>
           </ion-menu-toggle>
 
