--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -9,7 +9,7 @@
 
 <ion-content class="ion-padding">
 
-  <h2>Sobre</h2>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumque amet, adipisci culpa, corrupti maxime dignissimos earum impedit delectus totam cum rerum minus minima non sunt facere eum tempora id?</p>
+  <p class="ion-no-margin">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumque amet, adipisci culpa, corrupti maxime
+    dignissimos earum impedit delectus totam cum rerum minus minima non sunt facere eum tempora id?</p>
 
 </ion-content>
