--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <!-- 1. Verifica se os artigos já chegaram -->
-<ion-content class="ion-padding" fullscreen *ngIf="items">
+<ion-content class="ion-padding" *ngIf="items">
 
   <p class="ion-no-margin ion-margin-bottom"><small>Mais recentes aparecem primeiro.</small></p>
 
