Ajustes menores CSS

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,7 +10,7 @@
 <!-- 1. Verifica se os artigos já chegaram -->
 <ion-content class="ion-padding" fullscreen *ngIf="items">
 
-  <p class="ion-no-margin ion-margin-bottom"><small>Mais recentes aparecem primeiro.</small></p>
+  <p class="ion-no-margin ion-margin-bottom ion-text-center"><small>Mais recentes aparecem primeiro.</small></p>
 
   <!-- 2. Exibe os artigos -->
   <div *ngFor="let item of items | async">
