--- a/src/app/pages/contacts/contacts.page.html
+++ b/src/app/pages/contacts/contacts.page.html
@@ -9,6 +9,6 @@
 
 <ion-content class="ion-padding">
 
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dolore obcaecati quasi totam iusto nemo excepturi, necessitatibus eaque nobis modi officiis, voluptatum deserunt voluptates incidunt a tenetur eligendi asperiores tempora!</p>
+  <p class="ion-no-margin">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dolore obcaecati quasi totam iusto nemo excepturi, necessitatibus eaque nobis modi officiis, voluptatum deserunt voluptates incidunt a tenetur eligendi asperiores tempora!</p>
 
 </ion-content>
