--- a/src/app/pages/logout/logout.page.html
+++ b/src/app/pages/logout/logout.page.html
@@ -4,6 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Logout / Sair</ion-title>
+    <ion-img slot="end" src="../../../assets/appicon.png" routerLink="/home"></ion-img>
   </ion-toolbar>
 </ion-header>
 
