--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,9 @@ ion-menu ion-content {
 }
 
 ion-menu.md ion-content {
-  --padding-start: 8px;
-  --padding-end: 8px;
-  --padding-top: 20px;
+  --padding-start : 8px;
+  --padding-end   : 8px;
+  --padding-top   : 20px;
   --padding-bottom: 20px;
 }
 
@@ -27,7 +27,7 @@ ion-menu.md ion-list#inbox-list {
 }
 
 ion-menu.md ion-list#inbox-list ion-list-header {
-  font-size: 22px;
+  font-size  : 22px;
   font-weight: 600;
 
   min-height: 20px;
@@ -45,8 +45,8 @@ ion-menu.md ion-list#labels-list ion-list-header {
 
 ion-menu.md ion-item {
   --padding-start: 10px;
-  --padding-end: 10px;
-  border-radius: 4px;
+  --padding-end  : 10px;
+  border-radius  : 4px;
 }
 
 ion-menu.md ion-item.selected {
@@ -74,14 +74,14 @@ ion-menu.ios ion-list {
 }
 
 ion-menu.ios ion-note {
-  line-height: 24px;
+  line-height  : 24px;
   margin-bottom: 20px;
 }
 
 ion-menu.ios ion-item {
   --padding-start: 16px;
-  --padding-end: 16px;
-  --min-height: 50px;
+  --padding-end  : 16px;
+  --min-height   : 50px;
 }
 
 ion-menu.ios ion-item.selected ion-icon {
@@ -90,7 +90,7 @@ ion-menu.ios ion-item.selected ion-icon {
 
 ion-menu.ios ion-item ion-icon {
   font-size: 24px;
-  color: #73849a;
+  color    : #73849a;
 }
 
 ion-menu.ios ion-list#labels-list ion-list-header {
@@ -99,7 +99,7 @@ ion-menu.ios ion-list#labels-list ion-list-header {
 
 ion-menu.ios ion-list-header,
 ion-menu.ios ion-note {
-  padding-left: 16px;
+  padding-left : 16px;
   padding-right: 16px;
 }
 
@@ -108,7 +108,7 @@ ion-menu.ios ion-note {
 }
 
 ion-note {
-  display: inline-block;
+  display  : inline-block;
   font-size: 16px;
 
   color: var(--ion-color-medium-shade);
@@ -116,4 +116,24 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
+}
+
+/* Splash Screen */
+.splash {
+  background     : rgb(84, 41, 139);
+  width          : 100%;
+  height         : 100%;
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  flex-direction : column;
+  color          : black;
+}
+
+.splash h1 {
+  -webkit-text-stroke: 1px rgb(116, 116, 116);
+}
+
+.splash ion-spinner {
+  transform: scale(2);
 }
