--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- DICA 2.1 - ion-app -->
 <ion-app *ngIf="!splash">
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
@@ -83,6 +84,7 @@
   </ion-split-pane>
 </ion-app>
 
+<!-- DICA 2.2 - div class="splash" -->
 <div class="splash" *ngIf="splash">
   <img src="../assets/myicon.png" alt="Marfagafos">
   <h1 class="ion-margin-bottom"><strong>MARFAGAFOS</strong></h1>
