--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -118,7 +118,7 @@ ion-item.selected {
   --color: var(--ion-color-primary);
 }
 
-/* Splash Screen */
+/* DICA 2.1 */
 .splash {
   background     : rgb(84, 41, 139);
   width          : 100%;
@@ -131,7 +131,7 @@ ion-item.selected {
 }
 
 .splash h1 {
-  -webkit-text-stroke: 1px rgb(116, 116, 116);
+  -webkit-text-stroke: 1px rgb(199, 199, 199);
 }
 
 .splash ion-spinner {
