--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
               <ion-item routerDirection="root" routerLink="/login" lines="none" detail="false"
                 routerLinkActive="selected">
                 <ion-avatar slot="start">
-                  <ion-img src="../assets/user.png" alt="Faça Login"></ion-img>
+                  <ion-img src="assets/user.png" alt="Faça Login"></ion-img>
                 </ion-avatar>
                 <ion-label>Login / Entrar</ion-label>
               </ion-item>
